...
                                <state key="normal" title="Insert"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="InsertCointButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                        <state key="normal" title="Candy"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BuyCandyButton"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="DisplayMessage"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ChangeLabel"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                        <state key="normal" title="Return Coin"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ReturnCoinButton"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <state key="normal" title="Cola"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BuyColaButton"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <state key="normal" title="Chip"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BuyChipButton"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CoinInputTextField"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
...
